# Distributed-Prime-Search

./: .gitignore  CMakeLists.txt  CMakePresents.json  ClassDiagram.drawio  Communication Guide.txt  README.md  compileScript.ps1
Benchmarks/: CMakeLists.txt
Benchmarks/src/: searchBenchmark.cpp
Client/: CMakeLists.txt
Client/include/: CMakeLists.txt  ConnectionHandler.h  PrimeSearcher.h
Client/src/: CMakeLists.txt  ConnectionHandler.cpp  DPPClient.cpp  PrimeSearcher.cpp
Common/: CMakeLists.txt
Common/include/: FancyConsole.h  Serialization.h  config.h
Common/src/: Serialization.cpp
DPPClient/: CMakeLists.txt
DPPClient/include/: CMakeLists.txt  ConnectionHandler.h  Serialization.h
DPPClient/src/: CMakeLists.txt  DPPClient.cpp  Serialization.cpp
DPPServer/: CMakeLists.txt
DPPServer/include/: CMakeLists.txt  CommObj.h  MySockets.h  Serialization.h  ServerLogic.h
DPPServer/src/: CMakeLists.txt  DPPServer.cpp  MySockets.cpp  Serialization.cpp  ServerLogic.cpp
Server/: CMakeLists.txt  Primes_Found.txt  Ranges_Searched.txt
Server/include/: BoostNetworkManager.h  CMakeLists.txt  ClientHandler.h  FileIO.h  Listener.h  MessageQueue.h  MySockets.h  NetworkManager.h  ServerInterface.h  ServerLogic.h
Server/src/: BoostNetworkManager.cpp  CMakeLists.txt  ClientHandler.cpp  DPPServer.cpp  FileIO.cpp  Listener.cpp  MessageQueue.cpp  MySockets.cpp  NetworkManager.cpp  Ranges_Searched.txt  ServerLogic.cpp
